--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,14 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+flutter_launcher_icons:
+  android: "ic_launcher_vietmall"
+  ios: true
+  image_path: "assets/logo/img1.png"
 
 flutter:
   uses-material-design: true
   assets:
     - assets/logo/
-    - assets/
+    - assets/main/
