--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
   carousel_slider: 5.0.0
+  url_launcher: ^6.3.2
   # image_picker: ^1.0.7  <-- XÓA DÒNG NÀY
   # path: ^1.8.3          <-- XÓA DÒNG NÀY
 
